# dockerBestPractices

./: .dockerignore  Dockerfile  ReadMe.md  config.env  docker-compose.yaml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: main.yml
api/: config.py  icat_queries.py  logger.py  main.py
dependency_config/: filebeat.yml  logstash.conf  metricbeat.yml
test/: pytest.ini  test_main.py
