[tool.poetry]
name = "dockerbestpractices"
version = "0.1.0"
description = ""
authors = ["Alex Kemp <alexander.kemp@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.4"
python-icat = "^1.5.1"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
prometheus-client = "^0.21.0"
starlette = "^0.41.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
